# SPBU_homeworks

./: CMakeLists.txt
final/: final1.c  final2.c
final2/: retest.final3.c  retest2.3.c
homework1/: input_task_1.c  input_task_1.h  task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework2/: task2_1.c  task2_2.c
homework3/: task3.1.c  task3_2.c  task3_3.c
homework4/: task4_1.c  task4_2.md
homework5/: task5.1.c  task5.2.c
homework7/: task7.1.c
homework8/: task8.2.c
retest1/: retest1.1.c  retest1.2.c
test1/: test1.1.c
test2/: test2.1.c  test2.2.c  test2.3.c
